# padd

./: .gitignore  .travis.yml  Cargo.toml  README.md  build-profile.sh  codecov.yml  mkdocs.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: contributing.md  index.md  mkdocs.yml  testing.md
docs/docs/: architecture.md
docs/docs/spec/: alphabet.md  cdfa.md  grammar.md  ignorable.md  ignoreable.md  index.md  injectable.md  pattern.md
docs/lib/: index.md
docs/spec/: cdfa.md  grammar.md  ignorable.md  index.md  injectable.md  pattern.md
res/: clap_config.yml
src/: lib.rs  main.rs
src/cli/: cmd.rs  configuration.rs  formatter.rs  logger.rs  mod.rs  server.rs  thread_pool.rs  tracker.rs
src/core/: mod.rs  spec.rs
tests/: concept.rs  integration_test.rs  scope.rs
tests/input/: balanced_brackets  java8_annotation  java8_block_comments  java8_complex_spring  java8_concepts  java8_inline  java8_interface  java8_line_comments  java8_medium  java8_simple  java8_stress  json_complex  json_simple  lacs_complex  lacs_medium  lacs_simple  line_breaker_test  trailing_whitespace  tw_only_whitespace
tests/output/: balanced_brackets  java8_annotation  java8_block_comments  java8_complex_guice  java8_complex_spring  java8_concepts  java8_inline  java8_interface  java8_line_comments  java8_medium  java8_simple  java8_stress  json_complex  lacs_complex  lacs_medium  lacs_simple  trailing_whitespace  tw_lines
tests/spec/: balanced_brackets  java8  java8_extensive  json  lacs  line_breaker  padd_spec  spec-0  trailing_whitespace
(+37 files in other folders)
