[package]
name = "padd"
version = "0.1.0"
authors = ["Shane Hickman <srhickma@edu.uwaterloo.ca>"]

[lib]
name = "padd"

[dependencies]
lazy_static = "1.0"
stopwatch = "0.0.7"
regex = "0.2"
colored = "1.6.1"
rust-crypto = "0.2.36"

[dependencies.clap]
version = "2.32.0"
features = ["yaml"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
