[package]
name = "padd"
version = "0.1.0"
authors = ["Shane Hickman <srhickma@edu.uwaterloo.ca>"]

[lib]
name = "padd"

[dependencies]
lazy_static = "1.0"
stopwatch = "0.0.7"
regex = "0.2"
colored = "1.6.1"
rust-crypto = "0.2.36"
yaml-rust = "0.3.5"
log = "0.4.6"
strip-ansi-escapes = "0.1.0"
backtrace = "0.3.15"
difference = "2.0.0"

[dependencies.clap]
version = "2.32.0"
features = ["yaml"]

[dependencies.log4rs]
version = "0.8.3"
features = ["pattern_encoder"]

[dependencies.uuid]
version = "0.7"
features = ["v4"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
